fixed incorect refresh button css on mobile

--- a/uniuggla/app/mobile_global.css
+++ b/uniuggla/app/mobile_global.css
@@ -141,32 +141,6 @@
 	.dreamEducationButton:not(.locked):hover p {
 		text-shadow: 2px 1px var(--medium-green-shadow);
 	}
-
-	.refreshButton,
-	.refreshButton::before,
-	.refreshButton::after {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		box-sizing: border-box;
-		width: 100%;
-		height: 100%;
-		padding: 4px;
-		background-color: var(--medium-green);
-		border: var(--border-width) solid var(--medium-green-shadow);
-	}
-
-	.refreshButton:hover {
-		transition: background-color 200ms;
-		background-color: var(--medium-green-shadow);
-		cursor: pointer;
-	}
-
-	.refreshIcon {
-		fill: var(--extra-light-green);
-		width: 100%;
-		height: 100%;
-	}
 	/*
   End of Intrest
  ---===---===---===---===---===---===---===---===---===---
